--- a/src/App.css
+++ b/src/App.css
@@ -3505,11 +3505,11 @@ button {
       width: 350px !important;
     height: 480px;
     }
-    .designingimg1{
-        width: 350px !important;
-    height: 480px;
-    }
-   .developingimg1{
+  .designingimg1{
+      width: 350px !important;
+  height: 480px;
+  }
+   .contactimg1{
     width: 350px !important;
     height: 480px;
    }
