--- a/src/Pages/Developing/developing.css
+++ b/src/Pages/Developing/developing.css
@@ -4,7 +4,7 @@
 
 .brand-1 {
   margin: 80px 0px;
-  background-image: url(../../assets/images/Vector.png);
+  background-image: url(../../assets/images/vector.png);
   background-position: center;
   background-size: cover;
 }
